added input field, variable, and function for pushing items to end of array

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 
 
     <div>
-        <span id="output"></span>
+        <span id="output"></span><br />
+       
         <button onclick="backArray()">Previous</button>
-        <button onclick="forwardArray()">Next!</button>
+        <button onclick="forwardArray()">Next!</button><br />
+        <hr />
+        <label>Add to the array: </label><input type="text" name="input" id="input"><br />
+        <button onclick="addToArray()">Add to Array!</button><br />
+
+
         </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
